test jvm options to enable reflection on base classes